--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "jquery": "^3.7.1",
-    "sweetalert2": "^11.10.2",
+    "sweetalert2": "^11.6.13",
     "vue": "^3.4.5",
     "vue-axios": "^3.5.2",
     "vue-cookies": "^1.8.3",
     "vue-html-to-paper": "^2.0.3",
-    "vue-loading-overlay": "6.0",
+    "vue-loading-overlay": "^6.0.4",
     "vue-router": "^4.2.5",
     "vue3-cookies": "^1.0.6"
   },
