--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.6.3",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "jquery": "^3.7.1",
     "sweetalert2": "^11.6.13",
