--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "jquery": "^3.7.1",
+    "jquery.countdown": "^1.2.8",
     "sweetalert2": "^11.6.13",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.5",
