--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.3",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
+    "dotenv": "^16.4.5",
     "jquery": "^3.7.1",
     "jquery.countdown": "^1.2.8",
     "sweetalert2": "^11.6.13",
