--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VUE_APP_ROOT_APP= https://corp.undangin.com/
-VUE_APP_ROOT_API= https://apicorp.undangin.com/v1/
+VUE_APP_TITLE= https://corp.undangin.com/
+VUE_API_URL= https://apicorp.undangin.com/v1/
+VITE_FEATURE_ENABLED=true
